...
            TextField(
              controller: descriptionController,
              keyboardType: TextInputType.text,
              maxLines: 3,
              decoration: const InputDecoration(
                labelText: 'Descrição/Observação (Opcional)',
                key: Key('description_field'),
              ),
            ),
            const SizedBox(height: 40),
            ElevatedButton.icon(
              onPressed: submitEntry,
              icon: const Icon(Icons.save),
...
